--- a/Desafio.ipynb
+++ b/Desafio.ipynb
@@ -31,7 +31,7 @@
    "id": "0eb245f2",
    "metadata": {},
    "source": [
-    "### Carregar o dataset"
+    "## Carregar o dataset"
    ]
   },
   {
@@ -41,8 +41,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Carregar o dataset\n",
     "data = pd.read_csv(\"teste_indicium_precificacao.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "440585ce",
+   "metadata": {},
+   "source": [
+    "## Etapa 1: Análise Exploratória de Dados (EDA)\n",
+    "#### Visualizar as primeiras linhas do dataset"
    ]
   },
   {
@@ -86,11 +94,15 @@
     }
    ],
    "source": [
-    "# Etapa 1: Análise Exploratória de Dados (EDA)\n",
-    "# ==========================\n",
-    "\n",
-    "# Visualizar as primeiras linhas do dataset\n",
     "print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5bcadd3",
+   "metadata": {},
+   "source": [
+    "#### Informações gerais sobre o dataset"
    ]
   },
   {
@@ -131,8 +143,15 @@
     }
    ],
    "source": [
-    "# Informações gerais sobre o dataset\n",
     "print(data.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e992529",
+   "metadata": {},
+   "source": [
+    "#### Estatísticas descritivas"
    ]
   },
   {
@@ -178,8 +197,15 @@
     }
    ],
    "source": [
-    "# Estatísticas descritivas\n",
     "print(data.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe5b56b9",
+   "metadata": {},
+   "source": [
+    "#### Verificar valores ausentes"
    ]
   },
   {
@@ -213,8 +239,15 @@
     }
    ],
    "source": [
-    "# Verificar valores ausentes\n",
     "print(data.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60d2f1fb",
+   "metadata": {},
+   "source": [
+    "#### Substituir valores ausentes em 'reviews_por_mes' por 0"
    ]
   },
   {
@@ -224,8 +257,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Substituir valores ausentes em 'reviews_por_mes' por 0\n",
     "data['reviews_por_mes'] = data['reviews_por_mes'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "949506fe",
+   "metadata": {},
+   "source": [
+    "#### Remover colunas irrelevantes para o modelo"
    ]
   },
   {
@@ -235,8 +275,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remover colunas irrelevantes para o modelo\n",
     "data.drop(columns=['id', 'nome', 'host_id', 'host_name', 'ultima_review'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28dde4d1",
+   "metadata": {},
+   "source": [
+    "#### Gráficos exploratórios"
    ]
   },
   {
@@ -257,10 +304,17 @@
     }
    ],
    "source": [
-    "# Gráficos exploratórios\n",
     "sns.boxplot(x='bairro_group', y='price', data=data)\n",
     "plt.title('Distribuição de Preços por Região')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b349f83",
+   "metadata": {},
+   "source": [
+    "#### Matriz de Correlação"
    ]
   },
   {
@@ -294,18 +348,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a9645bc",
+   "metadata": {},
+   "source": [
+    "## Etapa 2: Preparação dos Dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b781d60f",
+   "metadata": {},
+   "source": [
+    "#### Remover outliers nos preços"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "276dc8c0-0c42-4f42-9a1b-e1ae8dfe22e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ==========================\n",
-    "# Etapa 2: Preparação dos Dados\n",
-    "# ==========================\n",
-    "\n",
-    "# Remover outliers nos preços\n",
     "data = data[data['price'] <= data['price'].quantile(0.95)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a45fbbc4",
+   "metadata": {},
+   "source": [
+    "#### Converter variáveis categóricas para numéricas"
    ]
   },
   {
@@ -315,8 +388,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Converter variáveis categóricas para numéricas\n",
     "data = pd.get_dummies(data, columns=['bairro_group', 'bairro', 'room_type'], drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e92dc22",
+   "metadata": {},
+   "source": [
+    "#### Definir features e target"
    ]
   },
   {
@@ -326,9 +406,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definir features e target\n",
     "X = data.drop(columns=['price'])\n",
     "y = data['price']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac5ede1f",
+   "metadata": {},
+   "source": [
+    "#### Dividir em conjuntos de treino e teste"
    ]
   },
   {
@@ -338,8 +425,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dividir em conjuntos de treino e teste\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "928dc4c9",
+   "metadata": {},
+   "source": [
+    "## Etapa 3: Modelagem Preditiva"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fbdc37d",
+   "metadata": {},
+   "source": [
+    "#### Instanciar o modelo"
    ]
   },
   {
@@ -349,12 +451,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ==========================\n",
-    "# Etapa 3: Modelagem Preditiva\n",
-    "# ==========================\n",
-    "\n",
-    "# Instanciar o modelo\n",
     "model = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d8d7db1",
+   "metadata": {},
+   "source": [
+    "#### Treinar o modelo"
    ]
   },
   {
@@ -782,8 +887,15 @@
     }
    ],
    "source": [
-    "# Treinar o modelo\n",
     "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05a74343",
+   "metadata": {},
+   "source": [
+    "#### Fazer previsões"
    ]
   },
   {
@@ -793,8 +905,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fazer previsões\n",
     "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47c6d235",
+   "metadata": {},
+   "source": [
+    "#### Calculando MAE e RMSE"
    ]
   },
   {
@@ -825,6 +944,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd22d349",
+   "metadata": {},
+   "source": [
+    "## Etapa 4: Previsão de Preço"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d3dd472",
+   "metadata": {},
+   "source": [
+    "#### Criando DataFrame para o novo apartamento"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "id": "0bb172cc-f366-4707-97f4-cc8a6e573283",
@@ -839,11 +974,6 @@
     }
    ],
    "source": [
-    "# ==========================\n",
-    "# Etapa 4: Previsão de Preço\n",
-    "# ==========================\n",
-    "\n",
-    "# Criar DataFrame para o novo apartamento\n",
     "novo_apartamento = {\n",
     "    'latitude': 40.75362,\n",
     "    'longitude': -73.98377,\n",
@@ -872,6 +1002,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5b7a2ce",
+   "metadata": {},
+   "source": [
+    "## Etapa 5: Exportar o Modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e54fba8e",
+   "metadata": {},
+   "source": [
+    "#### Salvando o modelo em formato .pkl"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "0d9b18b7-2195-43f2-b7ae-c66f973b3c03",
@@ -886,15 +1032,26 @@
     }
    ],
    "source": [
-    "# ==========================\n",
-    "# Etapa 5: Exportar o Modelo\n",
-    "# ==========================\n",
-    "\n",
-    "# Salvar o modelo em formato .pkl\n",
     "with open('modelo_precificacao.pkl', 'wb') as file:\n",
     "    pickle.dump(model, file)\n",
     "\n",
     "print(\"Modelo salvo como 'modelo_precificacao.pkl'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae07b135",
+   "metadata": {},
+   "source": [
+    "## Etapa 6: Executando o Modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8045b7b9",
+   "metadata": {},
+   "source": [
+    "#### Carregando o Arquivo do moledo exportado anteriormente"
    ]
   },
   {
@@ -906,6 +1063,14 @@
    "source": [
     "with open('modelo_precificacao.pkl', 'rb') as file:\n",
     "    loaded_model = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "068697be",
+   "metadata": {},
+   "source": [
+    "#### Colocando os dados para entrada no modelo"
    ]
   },
   {
@@ -935,6 +1100,14 @@
     "# Aplicar transformações (exemplo: get_dummies)\n",
     "novo_apartamento_df = pd.get_dummies(novo_apartamento_df, columns=['bairro_group', 'bairro', 'room_type'])\n",
     "novo_apartamento_df = novo_apartamento_df.reindex(columns=X_train.columns, fill_value=0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8508ab02",
+   "metadata": {},
+   "source": [
+    "#### Executando a previsão"
    ]
   },
   {
