--- a/Desafio.ipynb
+++ b/Desafio.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "id": "9fbc4a4a-f4a6-4d07-a6e9-be7fa3b6a60c",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "9e52eb70-4bca-43d0-9a1c-19865823a098",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "c403531e-d83b-4225-b66e-c15817a9856e",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "728cf40a-f59f-4141-87b1-1be431877fd1",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "41d48cee-1199-4a44-ba17-45943c1dc031",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "f94f69d5-7b55-4ea5-bf97-ec9b6d0387bd",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "bfe4b5ac-e5fe-4e6f-8299-6707eb3b842a",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "d2618048-0edc-408a-94f0-1512adabc888",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "id": "bd716e94-7392-469f-b1fb-0e4adc0fa5e8",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(x='bairro_group', y='price', data=data)\n",
+    "snsS.boxplot(x='bairro_group', y='price', data=data)\n",
     "plt.title('Distribuição de Preços por Região')\n",
     "plt.show()\n"
    ]
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "63570b0e-46c5-4a0b-8eae-1e9cbfa976a9",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
     "correlation_matrix = numeric_data.corr()\n",
     "\n",
     "# Criar o heatmap\n",
-    "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm')\n",
+    "snsS.heatmap(correlation_matrix, annot=True, cmap='coolwarm')\n",
     "plt.title('Matriz de Correlação')\n",
     "plt.show()"
    ]
